lox-tests/tests/variable/undefined_global.stderr
ERROR: Undefined variable name 'notDefined'
 --> 1:7
  |
1 | print notDefined;  // expect runtime error: Undefined variable 'notDefined'.
  |       ^--------^
